--- a/public/sec_page.css
+++ b/public/sec_page.css
@@ -3,5 +3,5 @@ body {
   font-family: "Dancing Script", cursive;
   background-image: url("https://images.wallpaperscraft.com/image/single/heart_glow_blur_54423_2560x1440.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
 }
