--- a/public/homepage.css
+++ b/public/homepage.css
@@ -1,3 +1,13 @@
+@media only screen and (orientation: Landscape) {
+  body {
+    background-image: url("https://images.wallpaperscraft.com/image/single/heart_glow_blur_54423_2560x1440.jpg");
+  }
+}
+@media only screen and (orientation: Portrait) {
+  body {
+    background-image: url("  https://images.unsplash.com/photo-1640625202932-33680b01a9c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+  }
+}
 #h1 {
   font-family: "Caveat", cursive;
   text-align: center;
@@ -5,9 +15,8 @@
 body {
   background-attachment: fixed;
   font-family: "Dancing Script", cursive;
-  background-image: url("https://images.wallpaperscraft.com/image/single/heart_glow_blur_54423_2560x1440.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
 }
 #a1 {
   border-style: hidden;
@@ -37,4 +46,28 @@ option {
 }
 ::-webkit-input-placeholder {
   color: black;
+}
+ul {
+  list-style: none;
+  display: flex;
+}
+
+.social-icon {
+  max-width: 70px;
+  max-width: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(15, 15, 15);
+  font-size: 27px;
+  margin-right: 11px;
+  cursor: pointer;
+}
+
+.social-icon i {
+  transition: 0.9s all;
+}
+
+.social-icon:hover i {
+  transform: scale(1.4);
 }
