--- a/public/sec_page.css
+++ b/public/sec_page.css
@@ -1,7 +1,53 @@
+@media only screen and (orientation: Landscape) {
+  body {
+    background-image: url("https://images.wallpaperscraft.com/image/single/heart_glow_blur_54423_2560x1440.jpg");
+  }
+}
+@media only screen and (orientation: Portrait) {
+  body {
+    background-image: url("  https://images.unsplash.com/photo-1640625202932-33680b01a9c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+  }
+}
 body {
   background-attachment: fixed;
   font-family: "Dancing Script", cursive;
-  background-image: url("https://images.wallpaperscraft.com/image/single/heart_glow_blur_54423_2560x1440.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
+}
+#h {
+  font-family: "Caveat", cursive;
+}
+#per {
+  font-family: "Pacifico", cursive;
+}
+#res {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+ul {
+  list-style: none;
+  display: flex;
+}
+
+.social-icon {
+  max-width: 70px;
+  max-width: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(15, 15, 15);
+  font-size: 27px;
+  margin-right: 11px;
+  cursor: pointer;
+}
+
+.social-icon i {
+  transition: 0.9s all;
+}
+
+.social-icon:hover i {
+  transform: scale(1.4);
 }
